--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Swiftie - Personality Test</title>
    
     <!-- Open Graph meta tags for sharing -->
-    <meta property="og:title" content="Swiftie - Personality Test" />
+    <meta property="og:title" content="Psychological Test - Swiftie" />
     <meta property="og:description" content="Take this fun personality test to find out which Taylor Swift album matches your vibe!" />
     <meta property="og:type" content="website" />
     <!-- Optional: You can add an image URL if you have one -->
