--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Swiftie - Personality Test</title>
+    <title>Psychological Test - Swiftie</title>
    
     <!-- Open Graph meta tags for sharing -->
     <meta property="og:title" content="Psychological Test - Swiftie" />
